<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_analytics"
            android:icon="@drawable/ic_menu_analytics"
            android:title="@string/menu_analytics" />

        <!-- 🔹 First blank page -->
        <item
            android:id="@+id/nav_blank_one"
            android:icon="@drawable/ic_menu_analytics"
            android:title="Blank One" />

        <!-- 🔹 Second blank page -->
        <item
            android:id="@+id/nav_blank_two"
            android:icon="@drawable/ic_menu_analytics"
            android:title="Blank Two" />

        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_menu_about_us"
            android:title="@string/menu_about_us" />
    </group>
</menu>